--- a/Portfolio.html
+++ b/Portfolio.html
@@ -462,8 +462,9 @@ footer i {
                 <p>I Would love to hear from you</p>
                 </div>
                 <div class="contact-links">
+                <a href="https://www.linkedin.com/in/adam-goodrich-55169677/" target="_blank" class="btn contact-details"><i class="fab fa-linkedin"></i> LinkedIn<br><div style="font-size: 12px;">linkedin.com</div></a>
                 <a id="profile-link" href="https://github.com/adam-goodrich" target="_blank" class="btn contact-details"><i class="fab fa-github"></i> GitHub<br><div style="font-size: 12px;">github.com/adam-goodrich</div></a>
-                <a href="https://twitter.com/Adam_Goodrich" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i>Twitter<br><div style="font-size: 12px;">@Adam_Goodrich</div></a>
+                <a href="https://twitter.com/Adam_Goodrich" target="_blank" class="btn contact-details"><i class="fab fa-twitter"></i> Twitter<br><div style="font-size: 12px;">@Adam_Goodrich</div></a>
                 <a href="mailto:agoodrich57@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Email<br><div style="font-size: 12px;">agoodrich57@gmail.com</div></a>
                 <a href="tel:407-388-5339" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call Me<br><div style="font-size: 12px;">407-388-5339</div></a>
             </div>
