changed about me section padding

--- a/index.html
+++ b/index.html
@@ -50,9 +50,11 @@
         <section id="welcome-section" class="welcome-section">
             <h1>Hello, World!</h1>
             <h2>I'm Adam Goodrich</h2>
-            <p>I am an aspiring web developer from Boston, MA</p>
-            <p>I am passionate about technology, art, and learning</p>
-            <p>Skills include: Python, JavaScript, HTML, and CSS</p>
+            <div class="about-me">
+                <p>I am an aspiring web developer from Boston, MA</p>
+                <p>I am passionate about technology, art, and learning</p>
+                <p>Skills include: Python, JavaScript, HTML, and CSS</p>
+            </div>
             <br>
             <p>let me show you some of my work</p>
             <a href="#projects" class="click_here">click here</a>
