added meta atgs

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
+    <meta property="og:title" content="Adam Goodrich Portfolio">
+    <meta property="og:description" content="Adam Goodrich Portfolio">
+    <meta property="og:url" content="https://adam-goodrich.github.io/portfolio/">
+    <meta property="og:image" content="images/preview.png">
   
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
