--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
     <link rel="manifest" href="site.webmanifest" />
     <link rel="apple-touch-icon" href="icon.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <meta charset="UTF-8" />
   </head>
@@ -52,23 +58,36 @@
       rel="stylesheet"
     />
 
-    <nav class="nav">
-      <div>
-        <a
-          href="https://www.logolynx.com/images/logolynx/a2/a2ea819f7b1fecc42b3de4556ac6c9d1.jpeg"
-        ></a>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #00adb5"
+    >
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler m-3"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item m-3">
+              <a class="nav-link" href="#welcome-section">Who I Am</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="#projects">What I've Done</a>
+            </li>
+            <li class="nav-item m-3">
+              <a class="nav-link" href="#contact">Let's Get In Touch</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <ul class="nav-list">
-        <li>
-          <a href="#welcome-section">Who I Am</a>
-        </li>
-        <li>
-          <a href="#projects">What I've Done</a>
-        </li>
-        <li>
-          <a href="#contact">Let's Get In Touch</a>
-        </li>
-      </ul>
     </nav>
 
     <section id="welcome-section" class="welcome-section">
@@ -76,16 +95,15 @@
       <h2>I'm Adam Goodrich</h2>
       <div class="about-me">
         <p>I am a web developer from Boston, MA</p>
-        <p>I am passionate about technology, art, and learning</p>
+        <p>I am passionate about technology and music</p>
         <p>Skills include: Python, JavaScript, HTML, and CSS</p>
         <br />
         <p>let me show you some of my work</p>
+        <a href="#projects" class="click_here">click here</a>
+        <br />
+        <p class="mt-4">Let's get in touch</p>
+        <a href="#contact" class="click_here">click here</a>
       </div>
-
-      <a href="#projects" class="click_here">click here</a>
-      <br />
-      <p>Let's get in touch</p>
-      <a href="#contact" class="click_here">click here</a>
     </section>
 
     <section id="projects" class="projects-section">
@@ -225,11 +243,16 @@
     </section>
 
     <footer>
-      <left_side> Created By Adam Goodrich 2020 </left_side>
+      <left_side> Created By Adam Goodrich 2021 </left_side>
       <p></p>
       <right_side>
         <a href="#welcome-section" class="click_here">Back To Top</a>
       </right_side>
     </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
