--- a/index.html
+++ b/index.html
@@ -241,13 +241,15 @@
         >
       </div>
     </section>
-
     <footer>
-      <left_side> Created By Adam Goodrich 2021 </left_side>
-      <p></p>
-      <right_side>
-        <a href="#welcome-section" class="click_here">Back To Top</a>
-      </right_side>
+      <div class="row">
+        <left_side class="col">
+          <p>Created By Adam Goodrich 2021</p>
+        </left_side>
+        <right_side class="col">
+          <a href="#welcome-section" class="click_here">Back To Top</a>
+        </right_side>
+      </div>
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
