changed welcome section mobile padding

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </nav>
 
     <section id="welcome-section" class="welcome-section">
-      <h1 class="mt-5">Hello, World!</h1>
+      <h1>Hello, World!</h1>
       <h2>I'm Adam Goodrich</h2>
       <div class="about-me">
         <p>I am a web developer from Boston, MA</p>
