added welcome section container

--- a/index.html
+++ b/index.html
@@ -90,19 +90,21 @@
       </div>
     </nav>
 
-    <section id="welcome-section" class="welcome-section">
-      <h1>Hello, World!</h1>
-      <h2>I'm Adam Goodrich</h2>
-      <div class="about-me">
-        <p>I am a web developer from Boston, MA</p>
-        <p>I am passionate about technology and music</p>
-        <p>Skills include: Python, JavaScript, HTML, and CSS</p>
-        <br />
-        <p>let me show you some of my work</p>
-        <a href="#projects" class="click_here">click here</a>
-        <br />
-        <p class="mt-4">Let's get in touch</p>
-        <a href="#contact" class="click_here">click here</a>
+    <section id="welcome-section " class="welcome-section">
+      <div class="container">
+        <h1 class="ms-1 me-1">Hello, World!</h1>
+        <h2>I'm Adam Goodrich</h2>
+        <div class="about-me">
+          <p>I am a web developer from Boston, MA</p>
+          <p>I am passionate about technology and music</p>
+          <p>Skills include: Python, JavaScript, HTML, and CSS</p>
+          <br />
+          <p>let me show you some of my work</p>
+          <a href="#projects" class="click_here">click here</a>
+          <br />
+          <p class="mt-4">Let's get in touch</p>
+          <a href="#contact" class="click_here">click here</a>
+        </div>
       </div>
     </section>
 
@@ -121,7 +123,7 @@
           />
           <p class="project-title">
             <span class="code">(</span>
-            Oasis Vegan Veggie Parlor Website
+            Oasis Vegan Veggie Parlor
             <span class="code">)</span>
           </p>
         </a>
@@ -243,10 +245,10 @@
     </section>
     <footer>
       <div class="row">
-        <left_side class="col">
-          <p>Created By Adam Goodrich 2021</p>
+        <left_side class="col ms-2">
+          <p>© Adam Goodrich 2021</p>
         </left_side>
-        <right_side class="col">
+        <right_side class="col me-5">
           <a href="#welcome-section" class="click_here">Back To Top</a>
         </right_side>
       </div>
