--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </nav>
 
     <section id="welcome-section" class="welcome-section">
-      <div class="container">
+      <div class="container welcome-section-content">
         <h1 class="ms-1 me-1">Hello, World!</h1>
         <h2>I'm Adam Goodrich</h2>
         <div class="about-me">
