--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     />
 
     <nav
-      class="navbar navbar-expand-lg navbar-light"
+      class="navbar navbar-expand-lg navbar-light navbar-static-top"
       style="background-color: #00adb5"
     >
       <div class="container-fluid">
@@ -91,7 +91,7 @@
     </nav>
 
     <section id="welcome-section" class="welcome-section">
-      <div class="container welcome-section-content">
+      <div class="container welcome-section-content mt-5">
         <h1 class="ms-1 me-1">Hello, World!</h1>
         <h2>I'm Adam Goodrich</h2>
         <div class="about-me">
@@ -239,7 +239,7 @@
           ><i class="fas fa-at"></i> Email<br />
           <div style="font-size: 12px">agoodrich57@gmail.com</div></a
         >
-        <a href="tel:407-388-5339" class="btn contact-details"
+        <a href="tel:407-388-5339" class="btn contact-details mb-5"
           ><i class="fas fa-mobile-alt"></i> Call Me<br />
           <div style="font-size: 12px">407-388-5339</div></a
         >
